--- a/site/pages/divisions.html
+++ b/site/pages/divisions.html
@@ -1,13 +1,13 @@
 ---
-title: 
-permalink: 
+title: TODO
+description: "TODO"
 layout: base.liquid
+permalink: /divisions/
 seo:
-  page_description: 
+  page_description: "TODO"
   canonical_url: 
   featured_image: 
   author_twitter_handle: 
-  open_graph_type:
+  open_graph_type: 
   no_index: false
-content_blocks:
 ---
