--- a/site/pages/news.html
+++ b/site/pages/news.html
@@ -2,11 +2,11 @@
 title: Resources for makers to learn, sell & grow
 description: "We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy."
 layout: layouts/blog.liquid
-permalink: /blog/
+permalink: /news/
 pagination:
-  data: collections.blog
+  data: collections.news
   size: 9
-  alias: blog
+  alias: news
 seo:
   page_description: "We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy."
   canonical_url: 
