Data-laking + removing layouts in preparation for mounting

--- a/site/pages/reports.html
+++ b/site/pages/reports.html
@@ -1,12 +1,8 @@
 ---
 title: TODO
 description: TODO
-layout: layouts/blog.liquid
+layout: custom_layouts/reports.liquid
 permalink: /reports/
-pagination:
-  data: collections.news
-  size: 9
-  alias: news
 seo:
   page_description: TODO
   canonical_url: 
