--- a/site/pages/news.html
+++ b/site/pages/news.html
@@ -1,13 +1,13 @@
 ---
-title: Resources for makers to learn, sell & grow
-description: "We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy."
+title: News
+description: All the news that fits, to print
 layout: custom_layouts/news.liquid
 permalink: /news/
 seo:
-  page_description: "We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy."
-  canonical_url: 
-  featured_image: 
-  author_twitter_handle: 
-  open_graph_type: 
+  page_description: All the news that fits, to print
+  canonical_url:
+  featured_image:
+  author_twitter_handle:
+  open_graph_type:
   no_index: false
 ---
