Updated 1 file via CloudCannon.

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -13,8 +13,8 @@ content_blocks:
   - _bookshop_name: home/hero
     title: This Company is Real Big
     description: >-
-      It's so big, in fact, that this parent website needs to syndicate news
-      content from a variety of smaller sites.
+      This company is *so* big, in fact, that this parent website needs to
+      syndicate news content from a variety of smaller sites.
 
 
       And our loyal team of content editors need consistent layouts and
