Updated 2 files via CloudCannon.

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -11,7 +11,7 @@ seo:
   no_index: false
 content_blocks:
   - _bookshop_name: home/hero
-    title: This Company is Real Big
+    title: Hello 11ty Folk!
     description: >-
       This company is *so* big, in fact, that this parent website needs to
       syndicate news content from a variety of smaller sites.
