--- a/site/pages/divisions.html
+++ b/site/pages/divisions.html
@@ -13,52 +13,24 @@ seo:
   open_graph_type:
   no_index: false
 content_blocks:
-  - _bookshop_name: global/feature
-    image:
-    image_alt:
-    title: Liminal Interfaces Department
-    description: >-
-      We believe that a good email marketing strategy is the key to growth. So
-      we’re helping you grow your business with tools and resources that make
-      email marketing easy.
-    button:
-      link: /signup
-      text: Try This Free
-    reversed: false
-  - _bookshop_name: global/feature
-    image:
-    image_alt:
-    title: Static Laboratories Subsection
-    description: >-
-      We believe that a good email marketing strategy is the key to growth. So
-      we’re helping you grow your business with tools and resources that make
-      email marketing easy.
-    button:
-      link: /signup
-      text: Try This Free
-    reversed: false
-  - _bookshop_name: global/feature
-    image:
-    image_alt:
+  - _bookshop_name: global/header
     title: Planar Files, LLC
-    description: >-
-      We believe that a good email marketing strategy is the key to growth. So
-      we’re helping you grow your business with tools and resources that make
-      email marketing easy.
-    button:
-      link: /signup
-      text: Try This Free
-    reversed: false
-  - _bookshop_name: global/feature
-    image:
-    image_alt:
+    title_suffix:
+    description: Flat files! It's all you need.
+    remove_top_padding: false
+  - _bookshop_name: global/header
+    title: Static Laboratories Subsection
+    title_suffix:
+    description: Static-first is the best approach.
+    remove_top_padding: true
+  - _bookshop_name: global/header
     title: XIty Incorporated
-    description: >-
-      We believe that a good email marketing strategy is the key to growth. So
-      we’re helping you grow your business with tools and resources that make
-      email marketing easy.
-    button:
-      link: /signup
-      text: Try This Free
-    reversed: false
+    title_suffix:
+    description: There are some numbers that just feel right.
+    remove_top_padding: true
+  - _bookshop_name: global/header
+    title: Liminal Interfaces Department
+    title_suffix:
+    description: Between editing and that which is edited, you will find us.
+    remove_top_padding: true
 ---
