Updated 1 file via CloudCannon.

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -1,4 +1,5 @@
 ---
+_schema: default
 permalink: /
 title: Home
 layout: base.liquid
@@ -11,7 +12,7 @@ seo:
   no_index: false
 content_blocks:
   - _bookshop_name: home/hero
-    title: Hello 11ty Folk!
+    title: This is a Real Big Company
     description: >-
       This company is *so* big, in fact, that this parent website needs to
       syndicate news content from a variety of smaller sites.
@@ -23,8 +24,8 @@ content_blocks:
     image:
     image_alt:
     button:
-      text: Let's look at the news
-      url: /news/
+      text: Sub-sites
+      url: /divisions/
   - _bookshop_name: global/testimonial
     title: Who made this?
     title_suffix:
