Updated 2 files via CloudCannon.

--- a/site/pages/divisions.html
+++ b/site/pages/divisions.html
@@ -1,10 +1,8 @@
 ---
-title: Divisions
-description: >-
-  RealBig is So Big™ that even our Divisions have Divisions. Here are just some
-  of our Divisions. 
-layout: base.liquid
+_schema: default
 permalink: /divisions/
+title: Divisions
+layout: base.liquid
 seo:
   page_description: Divisions
   canonical_url:
@@ -14,22 +12,26 @@ seo:
   no_index: false
 content_blocks:
   - _bookshop_name: global/header
-    title: Planar Files, LLC
+    title: <a href="https://planar.realbig.company">Planar Files, LLC</a>
     title_suffix:
     description: Flat files! It's all you need.
     remove_top_padding: false
   - _bookshop_name: global/header
-    title: Static Laboratories Subsection
+    title: >-
+      <a href="https://static.realbig.company">Static Laboratories
+      Subsection</a>
     title_suffix:
     description: Static-first is the best approach.
     remove_top_padding: true
   - _bookshop_name: global/header
-    title: XIty Incorporated
+    title: <a href="https://xity.realbig.company">XIty Incorporated</a>
     title_suffix:
     description: There are some numbers that just feel right.
     remove_top_padding: true
   - _bookshop_name: global/header
-    title: Liminal Interfaces Department
+    title: >-
+      <a href="https://liminal.realbig.company">Liminal Interfaces
+      Department</a>
     title_suffix:
     description: Between editing and that which is edited, you will find us.
     remove_top_padding: true
