Updated 1 file via CloudCannon.

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -24,8 +24,8 @@ content_blocks:
     image:
     image_alt:
     button:
-      text: Sub-sites
-      url: /divisions/
+      text: Find out more
+      url: /about/
   - _bookshop_name: global/testimonial
     title: Who made this?
     title_suffix:
