Updated 1 file via CloudCannon.

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -4,7 +4,7 @@ permalink: /
 title: Home
 layout: base.liquid
 seo:
-  page_description:
+  page_description: This is a RealBig Company
   canonical_url:
   featured_image:
   author_twitter_handle:
