Only show syndicated news on the main website

--- a/site/pages/singleNewsAggregate.html
+++ b/site/pages/singleNewsAggregate.html
@@ -1,7 +1,7 @@
 ---
 layout: custom_layouts/news-single.liquid
 pagination:
-  data: eleventyComputed.aggregateNews
+  data: eleventyComputed.syndicatedNews
   size: 1
   alias: post
 permalink: "news/{{ post.data.division | slugify}}/{{ post.data.title | slugify }}/"
