Updated 2 files via CloudCannon.

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -21,7 +21,10 @@ content_blocks:
       And our loyal team of content editors need consistent layouts and
       page-building components to use, regardless of which site they're working
       on.
-    image:
+
+
+      And they  want all of this on a static site!
+    image: /images/11ty-ascii-art.png
     image_alt:
     button:
       text: Find out more
