Updated 2 files via CloudCannon.

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -24,7 +24,7 @@ content_blocks:
 
 
       And they  want all of this on a static site!
-    image: /images/11ty-ascii-art.png
+    image: /images/ascii-possum.png
     image_alt:
     button:
       text: Find out more
