Updated 1 file via CloudCannon.

--- a/site/pages/index.html
+++ b/site/pages/index.html
@@ -23,7 +23,11 @@ content_blocks:
       on.
 
 
-      And they  want all of this on a static site!
+      And they  want all of this on a static Eleventy site! Luckily, with <a
+      href="https://cloudcannon.com/" title="CloudCannon" target="_blank"
+      rel="noopener">CloudCannon</a> and <a href="https://flatlake.app/"
+      title="Flatlake" target="_blank" rel="noopener">Flatlake</a>, it's all
+      possible.
     image: /images/ascii-possum.png
     image_alt:
     button:
